--- a/app/src/main/res/layout/recycler_view_cell_black_list_item.xml
+++ b/app/src/main/res/layout/recycler_view_cell_black_list_item.xml
@@ -39,15 +39,12 @@
 
     <ImageButton
         android:id="@+id/button_restore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_marginEnd="16dp"
-        android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:contentDescription="@string/image_default_content_description"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:scaleType="center"
-        android:src="@drawable/restore_icon"
+        android:src="@drawable/ic_restore_ripple_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
