--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    tools:context=".activities.WidgetSettingsActivity">
+    tools:context=".activities.SettingsActivity">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
