--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="color_text_primary">#4A4A4A</color>
 
     <color name="color_widget_layout_background">#c8ffffff</color>
+    <color name="color_half_transparent_white">#c8ffffff</color>
     <color name="default_ripple_color">#dcdcdc</color>
     <color name="color_news_caption">#3f51b5</color>
     <color name="color_news_pub_date">#4A8AD3</color>
