--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -25,7 +25,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/button_continue"
+        android:id="@+id/button_commit"
         style="@style/ButtonStyle1"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
@@ -46,7 +46,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_continue" />
+        app:layout_constraintTop_toBottomOf="@id/button_commit" />
 
     <Button
         android:id="@+id/button_clear_black_list"
