Changed housekeeper logic. Fix bugs. Code refactor.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="default_ripple_color">#dcdcdc</color>
     <color name="color_news_caption">#3f51b5</color>
     <color name="color_news_pub_date">#4A8AD3</color>
+    <color name="color_spinner_caption">#3f51b5</color>
 
     <color name="colorSettingsIcon">#4A8AD3</color>
 
