--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -83,4 +83,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="TextViewSpinnerCaption">
+        <!--<item name="android:textStyle">bold</item>-->
+        <item name="android:textColor">@color/color_spinner_caption</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
