--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -29,24 +29,45 @@
 
     </android.support.design.widget.TextInputLayout>
 
+    <TextView
+        android:id="@+id/tv_spinner_caption"
+        style="@style/TextViewSpinnerCaption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/settings_activity_spinner_caption"
+        app:layout_constraintEnd_toStartOf="@id/housekeeper_spinner"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />
+
+    <Spinner
+        android:layout_marginEnd="8dp"
+        android:id="@+id/housekeeper_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:dropDownWidth="80dp"
+        android:spinnerMode="dropdown"
+        app:layout_constraintBottom_toBottomOf="@id/tv_spinner_caption"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tv_spinner_caption" />
+
     <Button
         android:id="@+id/button_commit"
         style="@style/ButtonStyle1"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_weight="2"
         android:text="@string/settings_activity_button_commit_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />
+        app:layout_constraintTop_toBottomOf="@id/tv_spinner_caption" />
 
     <TextView
         android:id="@+id/tv_recycler_caption"
         style="@style/TextViewRecyclerViewCaption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:text="@string/settings_activity_rv_black_list_news"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_commit" />
